[project]
name = "dirigera-exporter"
version = "0.1.1"
description = ""
authors = [
    {name = "Johann Wagner",email = "johann@wagnerdevelopment.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dirigera (>=1.2.5,<2.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
