[project]
name = "dirigera-exporter"
version = "0.1.3"
description = ""
authors = [
    {name = "Johann Wagner",email = "johann@wagnerdevelopment.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dirigera (>=1.2.0,<2.0.0)",
    "prometheus-client (>=0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dirigera_exporter = "dirigera_exporter.main:main"
